# timesnapper

./: .gitignore  CMakeLists.txt
include/: AudioProcessor.hpp  cxxopts.hpp  utils.hpp
src/: AudioProcessor.cpp  main.cpp  mp.cpp  test.cpp
